fix: Fixed compliation errors